[package]
name = "sycamore-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "3ecf86a9bb420824172e10fd23e6116cdc346e47" }
wasm-bindgen = { version = "^0.2.63", features = ["serde-serialize"] }