[package]
name = "ping"
version = "0.1.0"
authors = ["mirdaki <mirdaki@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/matrix-org/matrix-rust-sdk/issues/35
# full wasm support not there
# can use tauri as backend (https://tauri.studio/en/docs/usage/guides/command)
# matrix-sdk = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "3ecf86a9bb420824172e10fd23e6116cdc346e47" }
wasm-bindgen = { version = "^0.2.63", features = ["serde-serialize"] }
